--- a/CSS3 BASIC/EXERCISE1/exercise1.html
+++ b/CSS3 BASIC/EXERCISE1/exercise1.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
+	<meta charset=utf-8>
 	<title>Exercise 1</title>
 	<style type="text/css" media="screen">
 		.container {
 			width: 800px;
 			box-shadow: -15px 0 15px -15px, 15px 0 15px -15px;
 			padding: 50px;
+			font-family: Happy Monkey;
 		}
 		p {
 			color: #707070;
 		}
 		li {
 			color: #707070;
+		}
+		h1 {
+			text-align: center;
+			color: #DB0038;
+		}
+		h2 {
+			color: #3998A3;
+		}
+		h3 {
+			color: #474747;
+		}
+		.hero {
+			background-color: #f4f4f4;
+			text-align: center;
+			padding-bottom: 10px;
+		}
+		li {
+			padding-top: 5px;
+			padding-bottom: 5px;
+		}
+		.rating {
+			color: #F4B400;
+			font-size: 25px;
+		}
+		footer {
+			text-align: center;
 		}
 	</style>
 </head>
@@ -45,11 +72,11 @@
 			<li>In a large bowl, combine the cream and half a cup of confectioners sugar, and whip until thickened. Decorate with fruit of your choice; strawberries are excellent.</li>
 		</ol>
 	</div>
-	<div class=rating>
-		<p>89 Ratings</p>
-		<span>&starf;&starf;&starf;&starf;&star;</span>
-	</div>
 	<footer>
+		<div class=rating>
+			<p>89 Ratings</p>
+			<span>&starf;&starf;&starf;&starf;&star;</span>
+		</div>
 		<p>All rights reserved copyright-symbol 2019</p>
 	</footer>
 </div>
