corrected navi code

--- a/CSS3 BASIC/EXERCISE1/advanced.html
+++ b/CSS3 BASIC/EXERCISE1/advanced.html
@@ -12,15 +12,16 @@
 
 		<nav>
 			<ul>
-				<li><a href="..."></a>Markus</li>
-				<li><a href="..."></a>Sander</li>
-				<li><a href="..."></a>Vincenzo</li>
+				<li><a href="..">Markus</a></li>
+				<li><a href="..">Sander</a></li>
+				<li><a href="..">Vincenzo</a></li>
 
 			</ul>
 		</nav>
 
 		<main>
-			<article id="feature">
+			<article>
+			<div id="feature">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -28,7 +29,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</article>
-
+					</div> 
 			<div class="leftbox">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
