exercises now commented

--- a/CSS3 INTERMEDIATE/index.html
+++ b/CSS3 INTERMEDIATE/index.html
@@ -8,29 +8,36 @@
 
 	<!-- Your CSS goes here -->
 	<style>
+		
+		/* Change the background color to #464939 for the whole page. */
 		body {
 			background-color: #464939;
 		}
 
+		/* Change the size of all h3 elements to 12 points */
 		h3 {
 			font-size: 12pt;
 		}
 
+		/*  */
 		#participation {
 			background-color: #747C3A;
 			color: white;
 		}
 
+		/*  */
 		#explanation .danger {
 			color: brown;
 			font-weight: bold;
 		}
 
+		/*  */
 		ul > li {
 			color: #525D21;
 			font-style:  italic;
 		}
 
+		/*  */
 		span.years > li.strong {
 			color: #DD8804;
 		}
