--- a/CSS ADVANCED/advanced.html
+++ b/CSS ADVANCED/advanced.html
@@ -6,6 +6,7 @@
 	<title>Advanced Exercise</title>
 </head>
 <body>
+
 	
 		<div id="header">
 
@@ -41,6 +42,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			
 					</div> 
+<div id="main">
 			<div class="left">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -49,6 +51,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
+
 			<div class="center">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -57,6 +60,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
+
 			<div class="right">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -66,12 +70,14 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 			</div>
+
+			</div>
 		
 
 		
 		<div id="footer">
 		<p>Copyright: Vincenzo - Markus - Sander</p>
-		<a href=""></a>CodeFactory</span>
+		<a href="">CodeFactory</a>
 				</div>	
 		
 
