more work on replication, mostly css

--- a/ORFatSander/replication.html
+++ b/ORFatSander/replication.html
@@ -6,18 +6,28 @@
 	<link rel="stylesheet" type="text/css" href="repstylesheet.css">
 </head>
 <body>
+<div class=fullwrap>
 	<!-- -->
 	<!-- Logo, weather widget, img link-->
-	<div class=header>
-		<div class=logo>
+	<header>
+		<div class=topbar>
+			<img class=newslogo src="https://orf.at/mojo/1_4/storyserver//news/news/images/news.svg" height=100px>
+			<img class=stationlogo src="https://orf.at/	mojo/1_4/storyserver//news/news/images/target_news.svg" height=100px>
 		</div>
-		<div class=logo>
-			
+		<div class=navbar>
+			<nav>
+				<a href="Fernsehen" title=""></a>
+				<a href="TVthek" title=""></a>
+				<a href="Radio" title=""></a>
+				<a href="Debatte" title=""></a>
+				<a href="Osterreich" title=""></a>
+				<a href="Wetter" title=""></a>
+				<a href="Sport" title=""></a>
+				<a href="News" title=""></a>
+				<a href="ORF.at im UberBlick" title=""></a>
+			</nav>
 		</div>
-		<div class=logo>
-			
-		</div>
-	</div>
+	</header>
 	<!-- News cards-->
 	<div class=newscardContainer>
 		<div class=newscardContainerLeft>
@@ -64,5 +74,6 @@
 			</nav>
 		</footer>
 	</div>
+</div>
 </body>
 </html>
