fixed href/title mixup in navbar

--- a/ORFatSander/replication.html
+++ b/ORFatSander/replication.html
@@ -16,15 +16,15 @@
 		</div>
 		<div class=navbar>
 			<nav>
-				<a href="Fernsehen" title=""></a>
-				<a href="TVthek" title=""></a>
-				<a href="Radio" title=""></a>
-				<a href="Debatte" title=""></a>
-				<a href="Osterreich" title=""></a>
-				<a href="Wetter" title=""></a>
-				<a href="Sport" title=""></a>
-				<a href="News" title=""></a>
-				<a href="ORF.at im UberBlick" title=""></a>
+				<a href="Fernsehen" title="Fernsehen"></a>
+				<a href="TVthek" title="TVthek"></a>
+				<a href="Radio" title="Radio"></a>
+				<a href="Debatte" title="Debatte"></a>
+				<a href="Osterreich" title="Osterreich"></a>
+				<a href="Wetter" title="Wetter"></a>
+				<a href="Sport" title="Sport"></a>
+				<a href="News" title="News"></a>
+				<a href="ORF.at im UberBlick" title="ORF.at im UberBlick"></a>
 			</nav>
 		</div>
 	</header>
