added shadow on main div

--- a/CSS ADVANCED/advanced.html
+++ b/CSS ADVANCED/advanced.html
@@ -23,8 +23,8 @@
 				<a href="#">Markus</a>
 				<a href="#">Sander</a>
 				<a href="#">Vincenzo</a>
-				<a href="#">Vincenzo</a>
-				<a href="#">Vincenzo</a>
+				<a href="#">Hugo</a>
+				<a href="#">Egon</a>
 
 			
 		</div>
