fixed nav.... again.... never going to fuck that up again

--- a/ORFatSander/replication.html
+++ b/ORFatSander/replication.html
@@ -16,15 +16,15 @@
 		</div>
 		<div class=navbar>
 			<nav>
-				<a href="Fernsehen" title="Fernsehen"></a>
-				<a href="TVthek" title="TVthek"></a>
-				<a href="Radio" title="Radio"></a>
-				<a href="Debatte" title="Debatte"></a>
-				<a href="Osterreich" title="Osterreich"></a>
-				<a href="Wetter" title="Wetter"></a>
-				<a href="Sport" title="Sport"></a>
-				<a href="News" title="News"></a>
-				<a href="ORF.at im UberBlick" title="ORF.at im UberBlick"></a>
+				<a href="replication.html" >Fernsehen</a>
+				<a href="replication.html" >TVthek</a>
+				<a href="replication.html" >Radio</a>
+				<a href="replication.html" >Debatte</a>
+				<a href="replication.html" >Osterreich</a>
+				<a href="replication.html" >Wetter</a>
+				<a href="replication.html" >Sport</a>
+				<a href="replication.html" >News"</a>
+				<a href="replication.html" >ORF.at im UberBlick</a>
 			</nav>
 		</div>
 	</header>
