--- a/CSS ADVANCED/advanced.html
+++ b/CSS ADVANCED/advanced.html
@@ -74,10 +74,10 @@
 			</div>
 		
 
-		
+							<!---Fotter including Copyright--->
 		<div id="footer">
 		<p>Copyright: Vincenzo - Markus - Sander</p>
-		<a href="">CodeFactory</a>
+		<a href="https://codefactory.wien/de/home/" target="_blank">CodeFactory</a>
 				</div>	
 		
 
