--- a/CSS ADVANCED/advanced.html
+++ b/CSS ADVANCED/advanced.html
@@ -76,8 +76,8 @@
 
 							<!---Fotter including Copyright--->
 		<div id="footer">
-		<p>Copyright: Vincenzo - Markus - Sander</p>
-		<a href="https://codefactory.wien/de/home/" target="_blank">CodeFactory</a>
+		<p> Vincenzo - Markus - Sander</p>
+		<a href="https://codefactory.wien/de/home/" target="_blank">&copy CodeFactory</a>
 				</div>	
 		
 
