--- a/CSS ADVANCED/advanced.html
+++ b/CSS ADVANCED/advanced.html
@@ -17,14 +17,14 @@
 	
 		
 
-		<div id="nav">
+					<div id="nav">
 			
 			
 				<a href="#">Markus</a>
-				<a href="#">Sander</a>
-				<a href="#">Vincenzo</a>
-				<a href="#">Hugo</a>
-				<a href="#">Egon</a>
+					<a href="#">Sander</a>
+						<a href="#">Vincenzo</a>
+							<a href="#">Hugo</a>
+								<a href="#">Egon</a>
 
 			
 		</div>
@@ -42,7 +42,8 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			
 					</div> 
-<div id="main">
+
+		<div id="main">
 			<div class="left">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -50,7 +51,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
+							</div>
 
 			<div class="center">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -59,7 +60,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
+							</div>
 
 			<div class="right">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -69,9 +70,9 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-			</div>
+							</div>
 
-			</div>
+			</div>  <!---End of Main Div--->
 		
 
 							<!---Fotter including Copyright--->
